RESOLVED FIXED172509
ASSERT(!m_timeoutTimer.isActive()) hit in BackgroundProcessResponsivenessTimer::responsivenessCheckTimerFired()
https://bugs.webkit.org/show_bug.cgi?id=172509
Summary ASSERT(!m_timeoutTimer.isActive()) hit in BackgroundProcessResponsivenessTime...
Chris Dumez
Reported 2017-05-23 10:47:55 PDT
ASSERT(!m_timeoutTimer.isActive()) hit in BackgroundProcessResponsivenessTimer::responsivenessCheckTimerFired().
Attachments
Patch (4.06 KB, patch)
2017-05-23 10:56 PDT, Chris Dumez
ggaren: review+
Chris Dumez
Comment 1 2017-05-23 10:48:16 PDT
Chris Dumez
Comment 2 2017-05-23 10:56:57 PDT
Geoffrey Garen
Comment 3 2017-05-23 16:35:25 PDT
Comment on attachment 311025 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=311025&action=review r=me > Source/WebKit2/ChangeLog:28 > + updateState() was called while the IPC handshake is doing on, we would have is doing on => was in process
Chris Dumez
Comment 4 2017-05-23 16:45:47 PDT
Note You need to log in before you can comment on or make changes to this bug.